apps/gavai/web/src/app/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 54 83% 95%;
    --foreground: 97 29% 11%;
    --card: 53 53% 91%;
    --card-foreground: 97 29% 11%;
    --popover: 54 83% 95%;
    --popover-foreground: 97 29% 11%;
    --primary: 97 29% 11%;
    --primary-foreground: 54 83% 95%;
    --secondary: 99 24% 19%;
    --secondary-foreground: 54 83% 95%;
    --muted: 53 36% 82%;
    --muted-foreground: 95 15% 31%;
    --accent: 53 53% 91%;
    --accent-foreground: 97 29% 11%;
    --destructive: 0 52% 36%;
    --destructive-foreground: 0 0% 100%;
    --border: 52 30% 75%;
    --input: 52 30% 75%;
    --ring: 97 29% 11%;
    --chart-1: 99 24% 19%;
    --chart-2: 95 15% 31%;
    --chart-3: 98 17% 47%;
    --chart-4: 82 20% 62%;
    --chart-5: 46 15% 83%;
    --sidebar: 97 29% 11%;
    --sidebar-foreground: 54 83% 95%;
    --sidebar-primary: 54 83% 95%;
    --sidebar-primary-foreground: 97 29% 11%;
    --sidebar-accent: 99 24% 19%;
    --sidebar-accent-foreground: 54 83% 95%;
    --sidebar-border: 99 24% 19%;
    --sidebar-ring: 54 83% 95%;
    --radius: 0rem;
    --tracking-normal: 0.05em;
    --spacing: 0.25rem;
  }

  .dark {
    --background: 30 9% 9%;
    --foreground: 72 12% 91%;
    --card: 30 8% 12%;
    --card-foreground: 72 12% 91%;
    --popover: 30 9% 9%;
    --popover-foreground: 72 12% 91%;
    --primary: 72 12% 91%;
    --primary-foreground: 30 9% 9%;
    --secondary: 30 8% 12%;
    --secondary-foreground: 72 12% 91%;
    --muted: 30 8% 15%;
    --muted-foreground: 72 10% 65%;
    --accent: 30 8% 15%;
    --accent-foreground: 72 12% 91%;
    --destructive: 0 52% 36%;
    --destructive-foreground: 72 12% 91%;
    --border: 30 8% 18%;
    --input: 30 8% 18%;
    --ring: 72 12% 91%;
    --chart-1: 72 12% 91%;
    --chart-2: 72 10% 75%;
    --chart-3: 72 8% 55%;
    --chart-4: 72 6% 35%;
    --chart-5: 72 4% 20%;
    --sidebar: 30 8% 7%;
    --sidebar-foreground: 72 12% 91%;
    --sidebar-primary: 72 12% 91%;
    --sidebar-primary-foreground: 30 9% 9%;
    --sidebar-accent: 30 8% 15%;
    --sidebar-accent-foreground: 72 12% 91%;
    --sidebar-border: 30 8% 18%;
    --sidebar-ring: 72 12% 91%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
    letter-spacing: var(--tracking-normal);
  }
}

